test(accessibility-test): adding colour contrast issue to test accessibility tests

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,7 +18,8 @@
 
 :root {
   --primary-col: #333d47;
-  --secondary-col: #333d47;
+  /* --secondary-col: #333d47; */
+  --secondary-col: #87999e;
   --accent-col: #f2bab0;
   --bg-col: #f3f3f3;
   --txt-col: #191919;
